Added support for decoding base64 encoded message.
Set

  DecodeBase64: true

in your config file and incoming base64 messages will be automatically decoded.

--- a/templates/mocksmtpd.conf.erb
+++ b/templates/mocksmtpd.conf.erb
@@ -3,6 +3,7 @@ Port: 25
 RequestTimeout: 120
 LineLengthLimit: 1024
 LogLevel: INFO
+DecodeBase64: false
 
 LogFile: ./log/mocksmtpd.log
 PidFile: ./log/mocksmtpd.pid
